2004-02-13  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/psd.c (load_image): Initialize dest to NULL,
        make it so the temp variable use for PANOTOOLS_FIX is only declared
        when it is enabled.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12363 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-13  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/common/psd.c (load_image): Initialize dest to NULL,
+	make it so the temp variable use for PANOTOOLS_FIX is only declared
+	when it is enabled.
+
+2004-02-13  Manish Singh  <yosh@gimp.org>
+
 	* app/base/temp-buf.c (temp_buf_get_memsize)
 	* core/gimpviewable.c (gimp_viewable_get_memsize): Add some casts
 	to gsize for ints to prevent overflows.
