--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-sections.txt: updated.
+
 2004-02-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
