--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-02-15  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimpdrawable.c (gimp_drawable_get): warn and return NULL
+	instead of a meaningless struct for invalid drawable_IDs. Will
+	make buggy plug-ins crash earlier and more reliably.
+
+	Replaced all if(drawable) by g_return_if_fail(drawable != NULL)
+
+	* libgimp/gimptile.c (gimp_tile_ref): replaced if(tile)
+	by g_return_if_fail(tile != NULL)
+
+	(gimp_tile_unref): g_return_if_fail(tile->ref_count > 0)
+
 2004-02-15  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/gif.c: only call gimp_ui_init() when being run
