--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-16  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-02-10  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
