--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-16  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2004-02-11  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
