--- a/tips/pl.po
+++ b/tips/pl.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp20-tips\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"POT-Creation-Date: 2004-02-16 09:51+0100\n"
 "PO-Revision-Date: 2003-11-19 09:24+0100\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
@@ -56,10 +56,9 @@ msgstr ""
 "zamiast koloru pierwszoplanowego zostanie użyty kolor tła."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "Podczas korzystania z narzędzia obracania przeciąganie wskaźnika przy "
 "przyciśniętym jednocześnie klawiszu <tt>Ctrl</tt> wymusza obrót z krokiem co "
@@ -89,12 +88,11 @@ msgstr ""
 "warstwę. Ten sam efekt można uzyskać korzystając z menu kontekstowego."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Jeśli w preferencjach GIMP-a aktywna jest opcja \"Dynamiczne skróty "
 "klawiszowe\", wówczas program pozwala na zmienianie skrótów klawiszowych w "
@@ -133,9 +131,9 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:11
 #, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 "Podczas tworzenia pociągnięcia wzdłuż ścieżki lub zaznaczenia (\"Edycja/"
 "Pociągnij ścieżkę...\" lub \"Edycja/Pociągnij zaznaczenie...\") możliwe jest "
@@ -153,10 +151,9 @@ msgstr ""
 "spowoduje ukrycie lub wyświetlenie okien dialogowych albo narzędziówki."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Większość wtyczek wykonuje operacje tylko na aktywnej warstwie. Jeśli "
@@ -175,12 +172,11 @@ msgstr ""
 "wysyłać na adres <b>translators@gnome.pl</b>."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Nie wszystkie efekty mogą być wykorzystywane na obrazach dowolnych typów. "
 "Efekty, których nie można użyć na bieżącym obrazie, reprezentowane są przez "
@@ -265,18 +261,6 @@ msgstr ""
 "ustalić promień okręgu przeciągając wskaźnik myszy."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"\"Edycja -&gt; Rysuj\" pozwala na rysowanie bieżącym pędzlem prostych "
-"prostokątów lub okręgów wzdłuż krawędzi zaznaczenia. Bardziej skomplikowane "
-"figury uzyskasz, wybierając z menu opcję \"Filtry -&gt; Renderowanie -&gt; "
-"Gfig\"."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -291,7 +275,7 @@ msgstr ""
 "nachylenie odcinka zostanie ustalone jako wielokrotność 15 stopni."
 
 # TODO (cyba) - korekta stąd do końca
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -304,11 +288,17 @@ msgstr ""
 "możesz zapisać swoją pracę w innym (bardziej strawnym ;-) formacie np. JPEG, "
 "PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"Możesz ustawić zaznaczenie a następnie przesunąć je myszką przytrzymując "
+"klawisz <tt>Alt</tt>. Jeśli to powoduje ruch okna to sprubuj użyć <tt>Shift"
+"+Alt</tt>."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -317,10 +307,9 @@ msgstr ""
 "lewo lub prawo."
 
 # hmm synch z reszta
-#: tips/gimp-tips.xml.in.h:27
-#, fuzzy
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -328,7 +317,7 @@ msgstr ""
 "skomplikowane zaznaczenia. Zakładka \"Ścieżki\" w oknie \"Warstwy\" pozwala "
 "pracować nad wieloma ścieżkami i konwertować je do zaznaczenia."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -336,7 +325,7 @@ msgstr ""
 "Możesz przeciągnąć warstwę z okna \"Warstwy\" na narzędziówkę. W ten sposób "
 "stworzysz nowy obraz z zawartością tej warstwy."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -346,6 +335,17 @@ msgstr ""
 "przeciągnięcie koloru z narzędziówki (lub z okna wyboru koloru) i "
 "upuszczenie go na obrazie spowoduje wypełnienie aktywnej warstwy (lub "
 "zaznaczenia) wybranym kolorem."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"\"Edycja -&gt; Rysuj\" pozwala na rysowanie bieżącym pędzlem prostych "
+"prostokątów lub okręgów wzdłuż krawędzi zaznaczenia. Bardziej skomplikowane "
+"figury uzyskasz, wybierając z menu opcję \"Filtry -&gt; Renderowanie -&gt; "
+"Gfig\"."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -414,12 +414,3 @@ msgstr ""
 "chwili możesz modyfikować zaznaczenie jako kolor, używając bieżącego "
 "narzędzia. Po zakończeniu modyfikacji przywróć zwykły widok, klikając jeszce "
 "raz na przycisk z \"mrówkami\"."
-
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
-#~ msgstr ""
-#~ "Możesz ustawić zaznaczenie a następnie przesunąć je myszką przytrzymując "
-#~ "klawisz <tt>Alt</tt>. Jeśli to powoduje ruch okna to sprubuj użyć "
-#~ "<tt>Shift+Alt</tt>."
