2004-02-16  Sven Neumann  <sven@gimp.org>
	* app/config/gimpxmlparser.c (gimp_xml_parser_parse_io_channel):
	unset the GIOChannel's encoding before trying to find and parse
	the XML header.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12372 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-16  Sven Neumann  <sven@gimp.org>
+
+	* app/config/gimpxmlparser.c (gimp_xml_parser_parse_io_channel):
+	unset the GIOChannel's encoding before trying to find and parse
+	the XML header.
+
 2004-02-15  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimpdrawable.c (gimp_drawable_get): warn and return NULL
