2004-02-16  Sven Neumann  <sven@gimp.org>
	* Makefile.am (tips_POFILES): added ms.po (Malay).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12376 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-16  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added ms.po (Malay).
+
 2004-02-16  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
