2004-02-16  Sven Neumann  <sven@gimp.org>
	* libgimp/gimptile.c (gimp_tile_cache_insert): partly rewritten.
	Instead of removing the list element from the hash table, freeing
	it, allocating a new one and inserting it again, simply move it to
	the end of the list without touching the hash table at all.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12378 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-02-16  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimptile.c (gimp_tile_cache_insert): partly rewritten.
+	Instead of removing the list element from the hash table, freeing
+	it, allocating a new one and inserting it again, simply move it to
+	the end of the list without touching the hash table at all.
+
+2004-02-16  Sven Neumann  <sven@gimp.org>
+
 	* app/config/gimpxmlparser.c (gimp_xml_parser_parse_io_channel):
 	set the GIOChannel encoding to NULL here instead of doing it in
 	gimp_xml_parser_parse_file().
